--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "esModuleInterop": true,
     "moduleResolution": "Node",
     "lib": ["esnext", "dom"]
-  }
+  },
+  "include": ["./packages/**/*"]
 }
